<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_page_back"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="419dp"
        android:layout_height="91dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="82dp"
        android:src="@drawable/hello_papercut" 
        android:contentDescription="@string/app_name" />

    <Button
        android:id="@+id/btnWorld"
        android:layout_width="192dp"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_background"
        android:layout_gravity="center_horizontal"
        android:textColor="#D61111"
        android:text="@string/papercut_world" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="192dp"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_background"
        android:layout_gravity="center_horizontal"
        android:textColor="#D61111"
        android:text="@string/arts_show" />

</LinearLayout>
