<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/show_page_back"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="45dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="22dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/cut_line" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_below="@+id/imageView2"
        android:text="@string/fold"
        android:textColor="#D61111" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="45dp"
        android:layout_height="18dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:contentDescription="@string/app_name"
        android:src="@drawable/fold_line" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/imageView1"
        android:text="@string/cut"
        android:textColor="#D61111" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="25dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/btn_back" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/btnBack"
        android:layout_alignLeft="@+id/btnBack"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/btn_next" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnNext"
        android:layout_toLeftOf="@+id/btnNext"
        android:text="@string/next"
        android:textColor="#D61111" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnBack"
        android:layout_alignLeft="@+id/textView3"
        android:text="@string/back"
        android:textColor="#D61111" />

    <ImageView
        android:id="@+id/showboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnBack"
        android:layout_alignTop="@+id/imageView2"
        android:layout_centerInParent="true"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="105dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/first_show" />

</RelativeLayout>