<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/dialog"
    >
<TextView  
	android:id="@+id/tvname"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dip"
    android:layout_marginRight="20dip"
    android:text="@string/where_r_u"
    android:gravity="left"
    android:textAppearance="?android:attr/textAppearanceMedium"
    />
<EditText
	android:id="@+id/answer"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginLeft="20dip"
	android:layout_marginRight="20dip"
	android:scrollHorizontally="true"
	android:autoText="false"
	android:capitalize="none"
	android:gravity="fill_horizontal"
	android:textAppearance="?android:attr/textAppearanceMedium"
/>
<TextView
	android:id="@+id/aptude"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginLeft="20dip"
	android:layout_marginRight="20dip"
	android:text="@string/aptude"
	android:gravity="left"
	android:textAppearance="?android:attr/textAppearanceMedium"
/>
<EditText
	android:id="@+id/re_lo_1"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginLeft="20dip"
	android:layout_marginRight="20dip"
	android:scrollHorizontally="true"
	android:autoText="false"
	android:capitalize="none"
	android:gravity="fill_horizontal"
	android:password="true"
	android:textAppearance="?android:attr/textAppearanceMedium"
	
/>
<TextView
	android:id="@+id/altude"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginLeft="20dip"
	android:layout_marginRight="20dip"
	android:text="@string/altude"
	android:gravity="left"
	android:textAppearance="?android:attr/textAppearanceMedium"
/>
<EditText
	android:id="@+id/re_lo_2"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginLeft="20dip"
	android:layout_marginRight="20dip"
	android:scrollHorizontally="true"
	android:autoText="false"
	android:capitalize="none"
	android:gravity="fill_horizontal"
	android:password="true"
	android:textAppearance="?android:attr/textAppearanceMedium"
	
/>

</LinearLayout>
